# ChangeLog for app-office/scribus
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/scribus/ChangeLog,v 1.191 2014/08/14 06:24:56 jlec Exp $

  14 Aug 2014; Justin Lecher <jlec@gentoo.org> -scribus-1.4.1-r1.ebuild,
  -scribus-1.4.3.ebuild:
  Drop old

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> scribus-1.4.3.ebuild:
  Stable for ppc64, wrt bug #512108

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> scribus-1.4.3.ebuild:
  Stable for ppc, wrt bug #512108

  24 Jun 2014; Agostino Sarubbo <ago@gentoo.org> scribus-1.4.3.ebuild:
  Stable for x86, wrt bug #512108

  09 Jun 2014; Chema Alonso <nimiux@gentoo.org> scribus-1.4.3.ebuild:
  Stable for amd64 wrt bug #512108

  03 Jun 2014; Jeroen Roovers <jer@gentoo.org> scribus-1.4.3.ebuild:
  Stable for HPPA (bug #512108).

  03 Jun 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag description from metadata.xml

*scribus-1.4.4 (02 Jun 2014)

  02 Jun 2014; Justin Lecher <jlec@gentoo.org> -scribus-1.4.2-r2.ebuild,
  -scribus-1.4.2-r3.ebuild, +scribus-1.4.4.ebuild:
  Version Bump, #511798; drop old

  17 Sep 2013; Justin Lecher <jlec@gentoo.org> scribus-1.4.3.ebuild,
  scribus-1.4.9999.ebuild, scribus-9999.ebuild:
  Drop last bits of obsolete aspell support, #483182

*scribus-1.4.3 (07 Aug 2013)

  07 Aug 2013; Justin Lecher <jlec@gentoo.org> +scribus-1.4.3.ebuild,
  metadata.xml:
  Version bump, #479782; fix build against cairo; enhance cmake-utils.eclass
  and python-r1.eclass usage, #476930; make scripts optional, #476930

  02 Jul 2013; Justin Lecher <jlec@gentoo.org> scribus-1.4.1-r1.ebuild,
  scribus-1.4.2-r2.ebuild, scribus-1.4.2-r3.ebuild, scribus-1.4.9999.ebuild,
  scribus-9999.ebuild:
  Exchange base_src_prepare() by cmake-utils_src_prepare(), #475504

  09 Jun 2013; Mike Gilbert <floppym@gentoo.org> scribus-1.4.2-r3.ebuild,
  scribus-1.4.9999.ebuild, scribus-9999.ebuild: