@@ -10,29 +10,31 @@ AUX scribus-1.4.0_rc5-docs.patch 828 SHA256 50c56976bcc2e2a7d04ee62b8c2398d91137
 AUX scribus-1.4.2-cups.patch 831 SHA256 f054055c99e465475286a991f2a2f713fdd1e52874211e5423b0964ec72f29b6 SHA512 ff0e3ddf7374e84c80a17dde66f2c97c110d93064db5dedcad455fb1db588d94822ed9a8623b4d24a7b4d369323095ff6b8d4b3e1d199208b7af1d648794eefb WHIRLPOOL 70dca3d43ed9f5b86b04e9958a495160ab3c9079da3faad6e56441157db081da49e562c04f27c19f50f4c2afa3c0edeb87fd5e017688f9007db90afc5d510406
 AUX scribus-1.4.2-docs.patch 814 SHA256 5676964e58f241666a0b07513e55055e9badc562409493714e75aef750e4e00f SHA512 bf26fdf032b2e6d0ae1e11dcfa5f75ba36a1561868b2161afece7a993536c49353f6b53841ab3aa5749ff5b474df72ef87345c496719c4d609b8c1345aa8efe1 WHIRLPOOL 67734220b79f03dfba8cb8a796475e1f23c67c1c0da53a4c5d1f6315dd99ca2ed4a66cf1dc2c1bb3ac11fd92e97f87264a0fc0ebffa5327673fc62b60328fa9f
 AUX scribus-1.4.2-imaging.patch 859 SHA256 1ff5d40c526871592e51c58e89416d5e4eda39810b2cf918684872f64a89100c SHA512 430e8cc8e8425f9d41559efac6bc6aa3749c098aa2c0c2deef25e2fa41f8a300e634cdb3e27c09d0c293276165f71883ec56e5dcc7e27b8c1fbf252e6a925e79 WHIRLPOOL 368da6430a33f94fb072183a1351c9bc538c912f62a5a4ee5366488e712d12b5c368642f6b47fe185aaa09965a355d82173186dde81ffee23deb542a3abccb6d
-AUX scribus-1.5.0-docs.patch 751 SHA256 7b34557bc506b9b2f6d2c8d968e619d080ed762586a9eb1c3480d7b2cbc23586 SHA512 d0de059a60c8a3a9545d671f819072a45b68f5955987652eda282dc9edbb5eeaf26a49f7dd06bc00c64bf2d71644e73129594760c8ddfdc1eee7be4dc4a95940 WHIRLPOOL 7c30d33e2a4e40748e1db79064f51184addda67cb845fd2f8bccb83aafdc46dd82a5c02580d66e75ae4f3de99f3ca6710ecd5b4cee61a9f40bf87391d16c78d0
+AUX scribus-1.5.0-docs.patch 738 SHA256 28cb58a737e85dee4ddb616eb985cb767c4111cea6137cfb6fcaa5a4933210fe SHA512 8aa21fc666c0b7544c76bf3705f9ce211e1af2399cca704423891762a3fd6a7667c8ac7ff868977900bd4613a827b0ee92aa8023db6529c3f0a0749795d9dde5 WHIRLPOOL 5572bd5696c0ae5317e69ae83f8080775408a0fe387e9b6621803b58b0fac366b7062cb55624489ed381d733fae1a4335842e2c4650b9cf0d5454f34cbb770eb
+DIST scribus-1.4.3.tar.xz 70503072 SHA256 c72ef314c32f995895ca5025127e65ffeccbe2d445c358bca334a7249ea0afff SHA512 e4841b346803bc096c2e00b2071d03ce3bae6af8d7317353ebf8e724b5a9b6461d95406bee61c2a316bc6ee5d9e302e3fee7b51dd89eae9adc9e69b3aa40454e WHIRLPOOL fbcbd4ecaadb868d836848ef2656df4a1dba58ce7f7b27a810818604f9a2875c948e91484475a68b034d0cdcd9457b925701a8435a687c7cea0c2606f4d8cfca
 DIST scribus-1.4.4.tar.xz 71274196 SHA256 a43b9d55518ccebdb770d3cdac44ebf75c60ad11c284b210f6b0bd8c7a0217ae SHA512 aafcb0870d4a3054585d79ef7d7e7726dd8bd8eb8a177bcf812a42d00583a1d684a9abb61607e69c64bf9fdb4a98258be4a5b2df5cfb7c953238bc3a6a2d34bb WHIRLPOOL dff4f44ed0600737076a233ef3c7d2fd6b534f30e9d6016b884eadab2512c3f4a8610e932207d95a597795812ec7a45128ca66b6bc294fa1336f3411595c5df9
+EBUILD scribus-1.4.3.ebuild 3870 SHA256 4fa63fe3561abc61956ab3b159e13010f90c30a89db2c0ce07ba5d2939eb7110 SHA512 d462c22fdf9423e36a06b3a2a068f4366bf4faaec3e0609c2b16d3d1eb4cd9b1a0e8951d1ad7552ce3ea47ce477b54b5f7988d6afc1a7b7147282b1d4477cf02 WHIRLPOOL 7046c1f4d806de3b044677620c47858ddda69f54b6fa0efaee2b499cf953fd042855e1dc428316b78af31fd4694992b1e3692328ec53154a5a291ac2e2374188
 EBUILD scribus-1.4.4.ebuild 3869 SHA256 391eff6771f096b5109dfdfd068d185337692abb51717fa4c1bf8828234cbf30 SHA512 a5494c2645f2011d1ee5b585c62b363f0f87f83da058e2a103c20cb42619298cdc39ad5b644b784bc48fcf9d51740f7e8ca1d838d41479e1ea4478508e1794b1 WHIRLPOOL e686b3c1e77d5ffb404ace7dfae758396f652ee94c2c69a9a57089d663efbf7beae592bd0ab6d8dde3c0d73274970ef612ba8db56e5751794cad0928fbfbe8be
-EBUILD scribus-1.4.9999.ebuild 3517 SHA256 c0e5db000c332f77c342256ac8efe14697cbf763088b3031136ef8567c2fdf91 SHA512 3381824ea8137e6c2ea8c8f0fef3dc9bb00ef3e1baccee2fbcaa70fe21f1ff6a7cce47264937ff462601d487be10efe6cfa438e7eab84e7b775e312952e030eb WHIRLPOOL 49c519a560a23203f9b6e83505f212fecbe6b5d03e5701e01a3234279314c1399cd41400453b5d706a60291945a673d1bc414296b493a25319b0f1b2230dfa8f
-EBUILD scribus-9999.ebuild 3719 SHA256 c0b32b0848f4bfdced5b1f3901d9a2094c04ce306825b212e249d8685049a7c5 SHA512 efa7a309945077a017cac92e7c57dad771ea62ba74e00a9abc1fbefd33c83fb403c9d0a06ede535bd9ffe321b871afbd949734a41d7eb626c2b05b1be3541d32 WHIRLPOOL 5dcca829be08c53f8ce8b37a2967d216a8637fbbf1f4c52d12a208afdc20c78ba88dd528dacbb00b67a705a28bf8558e0ab93fbf34115878e9d000ecbacebe95
-MISC ChangeLog 25325 SHA256 a25ae57eec7b0b4a0e38a7781ea65cd34221288da371a4a2cc28f558c47e804f SHA512 65a2ec83ac3c7dbd1e5ed36227a7c7370c9f27128c3ff4d4ce0be0042a9de1797df681d652dbf418782ee369a04b0a1c746f67af6dcd9c277840f3346f1b5bd8 WHIRLPOOL aa59590f28afc8f29cb164bb29aa17890e1daf6c6518083d23f9ec76c935546a2ccdfe8ee41b6bc330502d0320beca94299f6eff14429f67f7af8a36e5a2fa86
-MISC metadata.xml 1475 SHA256 4bee55a72fb81ce7570822af039a80b293c832fbca98729e318069973b71a0b9 SHA512 2225d98eff5d9c6457b286fd1c65beeb825ee69768c2b846d7b419c2a55992a002bef1074ce4fdad225b5dcc0cd63c1400a8a579de2c6266cd1f2e44052fb5e5 WHIRLPOOL f5c0dc73599acef7e204dfdb13524f91fe1209238c660eb6e7fbc692687079214bb81425919ae9f38ec3d82d2e144e3327ce5f2878eb259a8a2e82d7dd528281
+EBUILD scribus-1.4.9999.ebuild 3980 SHA256 128439f5422e8fe164daa6d009ae86332bdf1c1ee9bb6de3d4e73854ebd6d528 SHA512 ae6331a53c82a11e4520011ec130776719a52bba08006a33077a5ccdd8e0645d41d9f01b8ac9763ab1ce6539380602569cfec842f5b095cc90f3630006e28b2c WHIRLPOOL 13abbe23339587854474473c15ec8396a72ce253ea41999804b3fa9cf72673923dccd84573d811fe3c7a638d05d584fb2f91ff43921d4bed0c859a08ed670703
+EBUILD scribus-9999.ebuild 4106 SHA256 3b85e9115115abe71195a4d8cccba1242c6252348bb4f17d97c5c4e4d596e009 SHA512 d5cd4ae30f6d9ee81e652c543a7cca790b1eecbc379c96c49d8b4d2c7dfac3f94377f6b550b0e3f96291d1e06afd5a73ba7941f1d68000f975e1a7bfbc8ff77e WHIRLPOOL 597da55784d33404bdb4e14a2db6ebfb5b03f5196ce10bb0f31efb88964cebbcdf1ebac9cabf9d0b1f3ca815f45c0bada2c06857fb5fa26fc5f222105ba0b1ce
+MISC ChangeLog 25524 SHA256 8585bf0c053203464a0ebb1a4553e635b86d1a8122f5886c2c1fd6fb4b470e9a SHA512 21ec54421df54c9ea16d99a484aec41f7d924695ddb74edca5b6e4b10e8d006ea43c6c76393b1aef0e35603446dea795bb2a8417779ab36b6f95a3a4bb59828e WHIRLPOOL 2facf26c3b5db255f339c5f20f467c9d4d0aa4f02953a5967885bc9f64ab1908f14cf5c5462f1175fe933f6600e1a6ea394876c3acf009ae0ed661069c4fb329
+MISC metadata.xml 1525 SHA256 23a06249a009e2b5fb3b11d1d2e9790ae25f9898333bb885d5764fcdd7a146a9 SHA512 8ab161b6a1b6981f8a81e95e62b514886b893d57243540f6f2f66c076047c147600d8f5d6b2341f667a70fed53d6ae74f427904c670aa4b5ca35500d81997ddf WHIRLPOOL aaaec9da2b5a731190be8b3b1fb3956fa88b9f6e59bead78db610d146fe455ae766ed8af21e40109486a37d8eb6022392c350bcef374c140a269bd38d6dc2914
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJT7FY4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJT7GIEXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir/ykP/1tdSlo7pXBDOXWY9GgppAA2
-+hT68rl38iC2AQC7qjZ+Umk7nlkzOGYTqHEsJG4PuwJSCgaPt8oITmPYTVF5fcr6
-e9Nasy+t2GIsPF7OXpnuE9sxe/lsqmUzyYUdNOgUMlejGA8TDyZ7cIjmqVMe1qVh
-B4Z9CuCNlVkJPpyVZSBeEeFE89G89y2yVUOA2gT68XmVQ5eig3N9s5x4RDWPodp6
-Tg05JVdrTPaIFbqCfp37/n5fhYq23j5dpV05QGJv3cOlJ5g+dYW4B6ymwBAF/5Xh
-UNxN857njLsMjliFPrOAuz4/Ufwa+XQ1RMpJOIou8dLSrgmzD4ojZ3HuugbuChhs
-9z5PoWr99fCP+8S3Jjg98wJOtdIawpPklukmupr4gRpvNoxsw/BKcDteP7L+gljU
-hAXSZC/ng4OVxrVrvL/GXA3BjYJQrIVcGpjPGZ8VyFzh1nwkwJTjN0qNdxyA3X99
-i0kuINwqX6/PjSE4NIPbQwCFyz8wmgL67c2PkuiX9k3xoEmGLnEPOml5RLSXun0i
-rkgNlOlN/2Fmow2mc09IrmKZlKmBfWLkZGTle2s5RBYWqebinn1xfcVmQFtaXgtO
-GKTMwHwmTIZErf+Js69ZyL62+caXafo2Etp1UKIemLaibaaKUOkpcIB4mbAXA2tO
-BgAlZyDAJ1phScHChsg+
-=UhmL
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirG48P/RyY+c3rjmrn8QHCv5e63FUW
+UI7O39aba0c/ciYK63YmXNYygiAXJZLx825zp6FZt8AMFXjmiY4TMeMW3VG52QId
+YJ4x1K3VPu7l2dcyBTfzSfXKQuHYmxIqdj6W1nUkTH2oVxCRu/KNgrA6HxpFsP/p
+vvrqmTDUMk0jYxJrznE/9OFlAGugGNSEKovzlrNaena9Z9P+hta6+tVDQcK32COK
+o+HbZfw5w4MzScqSOQB/d2YdnrTIhKAkD1QWjaBewJYRgghT6gQM7fAzEl3fQq3C
+jW95goxJyZypOnM8puQX149lj5LZ1/JRVZtg8wszODs82EfxpuxsAMx7nYFlPeE9
+hWe1jPwJXiEu4chL9vILPCIIXUn/xuH0md5djt8yBjd1+ckB1tRB9TqgQBHDNbhX
+ryvhdUHCirj/VLR77RRHNKSna+fx2RWdunfUWmLBuiPkZF5ShFmLBT9u8hDfU4sk
+57o2fwf92z9dCmEWZtwOZOs+xjQjglsh5ixkMFqN72WDM89ceGYUUrBDoavcOm73
+3qRkB6I26Hbras6GO+NYWske6xIRRJ97ACQhP+fKN0On1tZ18Q4VisRUjKl21sYo
+6VGy3DWXLQnKO3e/K4rYy8CtDftu3gqRk9QFnmZjTf/uHkOhrjkhhmNR4A/BJrm5
+yX2Di/TN1Jv+S+oPETAt
+=AMPo
 -----END PGP SIGNATURE-----
