@@ -1,11 +1,11 @@
- CMakeLists.txt |    4 +---
- 1 files changed, 1 insertions(+), 3 deletions(-)
+ CMakeLists.txt | 3 +--
+ 1 file changed, 1 insertion(+), 2 deletions(-)
 
 diff --git a/CMakeLists.txt b/CMakeLists.txt
-index 3f34048..4880594 100644
+index c97080b..46742c7 100644
 --- a/CMakeLists.txt
 +++ b/CMakeLists.txt
-@@ -267,7 +267,7 @@ ELSE (WIN32 OR OS2)
+@@ -244,7 +244,7 @@ ELSE (WIN32 OR OS2)
      SET(DOCDIR "share/doc/${MAIN_DIR_NAME}${TAG_VERSION}/")
    ELSE(TAG_VERSION OR BUILD_OSX_BUNDLE)
          IF(NOT WANT_VERSIONING)
@@ -14,11 +14,11 @@ index 3f34048..4880594 100644
          ELSE(NOT WANT_VERSIONING)
              SET(DOCDIR "share/doc/${MAIN_DIR_NAME}-${VERSION}/")
          ENDIF(NOT WANT_VERSIONING)
-@@ -801,7 +801,6 @@ INSTALL(FILES
-   BUILDING
-   ChangeLog
-   ChangeLogSVN
--  COPYING
-   LINKS
-   NEWS
-   PACKAGING
+@@ -883,7 +883,6 @@ INSTALL(FILES
+ 	BUILDING
+ 	ChangeLog
+ 	ChangeLogSVN
+-	COPYING
+ 	LINKS
+ 	NEWS
+ 	PACKAGING
