@@ -1,6 +1,11 @@
 # ChangeLog for app-office/scribus
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/scribus/ChangeLog,v 1.191 2014/08/14 06:24:56 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/scribus/ChangeLog,v 1.192 2014/08/14 07:15:15 jlec Exp $
+
+  14 Aug 2014; Justin Lecher <jlec@gentoo.org> +scribus-1.4.3.ebuild,
+  scribus-1.4.9999.ebuild, scribus-9999.ebuild, files/scribus-1.5.0-docs.patch,
+  metadata.xml:
+  Drop old, update live ebuilds
 
   14 Aug 2014; Justin Lecher <jlec@gentoo.org> -scribus-1.4.1-r1.ebuild,
   -scribus-1.4.3.ebuild:
